--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  font-family: 'Poppins', sans-serif;
+}
+
+
 .active{
   border-bottom: 2px solid black;
   border-radius: 3px;
 }
 
-.barra-rolagem{
-  scrollbar-width: 80%;
-  background: transparent;
+.scroll-style {
+  display: flex;
+  overflow-x: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #626262 #000000;
+  margin-bottom: 30px;
 }
+
+
